# pretix-midtrans

./: .update-locales.sh  LICENSE  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg
.github/workflows/: style.yml  tests.yml
pretix_midtrans/: apps.py  models.py  payment.py  signals.py  urls.py  views.py
pretix_midtrans/locale/de_Informal/LC_MESSAGES/: django.po
pretix_midtrans/migrations/: 0001_initial.py  0002_alter_midtranstransaction_order.py
pretix_midtrans/templates/pretixplugins/midtrans/: pay.html
