[project]
name = "pretix-midtrans"
dynamic = ["version"]
description = "Plugin for pretix payment with midtrans"
readme = "README.rst"
license = {text = "Apache"}
keywords = ["pretix"]
authors = [
    {name = "Nandan Ramdani", email = "nandanramdani608@gmail.com"},
]
maintainers = [
    {name = "Nandan Ramdani", email = "nandanramdani608@gmail.com"},
]

dependencies = [
]

[project.entry-points."pretix.plugin"]
pretix_midtrans = "pretix_midtrans:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/nandaan/pretix-midtrans"
repository = "https://github.com/nandaan/pretix-midtrans"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_midtrans.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
